# ApatiteRs

./: .gitignore  Cargo.toml
twitch-bot/: Cargo.toml
twitch-bot-api/: Cargo.toml
twitch-bot-api/src/: lib.rs  twitch_api.rs
twitch-bot/src/: config.rs  handler.rs  main.rs  plugin_loader.rs  twitch_api_impl.rs  twitch_eventsub.rs  user_cache.rs
twitch-bot/src/twitch_api_impl/: auth.rs
