[package]
name = "apatite"
version = "0.1.0"
edition = "2024"

[dependencies]
apatite-api = { path = "../twitch-bot-api" }
tokio = { version = "1", features = ["full"] }
libloading = "0.8"
async-trait = "0.1"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "form", "rustls", "query"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"]}
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
futures-util = "0.3.32"
urlencoding = "2.1.3"
rustls = { version = "0.23.37", features = ["ring"] }
thiserror = "2.0.18"
